Made tests Windows-compatible