@@ -170,7 +170,10 @@
                 <version>${surefire.version}</version>
                 <configuration>
                     <skip>true</skip>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=512m -XX:PermSize=128m</argLine>
+                    <forkCount>2</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <!--<argLine>-Xmx256m -XX:MaxPermSize=128m</argLine>-->
+                    <threadCountClasses>4</threadCountClasses>
                 </configuration>
                 <executions>
                     <execution>
